Fixed courses page shifting to the right, changed layout
Courses page would shift to the right since it's too short to have a
scrollbar, forced scrollbar.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@
 /*	################################################################
 	1. GENERAL STRUCTURES
 ################################################################# */
+
+html {
+    overflow-y: scroll;
+}
 	* { 
 		margin: 0;
 		padding: 0px;
